samples/_failures_safe/1761319076_5ee000_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b136e594.c: In function ‘main’:
./samples/SAFE/__tmp_b136e594.c:156:5: error: expected expression at end of input
  156 |     if (memcmp(input_buf.data, decompressed_buf.data, input_buf.size) != 0)
      |     ^~
./samples/SAFE/__tmp_b136e594.c:156:5: error: expected declaration or statement at end of input
